# python-project-template

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/: labeler.yml  release.yml
.github/workflows/: ci.yml  lint-pull-request-title.yml  main.yml  merge-main.yml  merge-master.yml  pr.yml  pull-request-workflow.yml  push-main.yml  push-master.yml  push-tag.yml
configs/: main.ini
requirements/: dev.in  dev.txt  main.in  main.txt
src/: app.py  config.py  gunicorn_conf.py  logger.py  main.py  task.py  web.py
tests/: task_test.py  test_app.py  test_config.py  test_main.py  test_task.py  test_web.py  web_test.py
