[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = ""
authors = ["YuXuan Tay <wyextay@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_project_template"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
gunicorn = "*"
pydantic = { extras = ["dotenv"], version = "*" }
python-dotenv = "*"
python-json-logger = "*"
typer = "*"
uvicorn = "*"

[tool.poetry.group.dev.dependencies]
bandit = "*"
black = { allow-prereleases = true, version = "*" }
fastapi = {extras = ["all"], version = "*"}
flake8 = "*"
isort = "*"
mypy = "*"
poetry = "^1.4.2"
pre-commit = "*"
pre-commit-hooks = "*"
pytest = "*"
pytest-cov = "*"

[tool.black]
line-length = 88
target-version = ["py311"]
include = ".pyi?$"
exclude = """
(
  /(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
"""

[tool.isort]
# compatible with psf/black
# https://pycqa.github.io/isort/docs/configuration/black_compatibility/
# https://github.com/psf/black/blob/master/docs/compatible_configs.md
profile = "black"
float_to_top = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = """
    -ra
    -v
    --strict-markers
"""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
