[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = ""
authors = ["YuXuan Tay <wyextay@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
gunicorn = "*"
pydantic = { extras = ["dotenv"], version = "*" }
python-dotenv = "*"
python-json-logger = "*"
typer = "*"
uvicorn = "*"
pydantic-settings = "*"

[tool.poetry.group.dev.dependencies]
fastapi = { extras = ["all"], version = "*" }
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
ruff = "*"
commitizen = "^3.13.0"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
# compatible with psf/black
# https://pycqa.github.io/isort/docs/configuration/black_compatibility/
# https://github.com/psf/black/blob/master/docs/compatible_configs.md
profile = "black"
float_to_top = true
src_paths = [".", "src", "tests"]

[tool.pytest.ini_options]
addopts = ["-ra", "-v", "--strict-markers", "--import-mode=importlib"]
minversion = "6.0"

[tool.ruff]
fix = true
src = [".", "src", "tests"]
select = ["ALL"]
ignore = [
    "D",      # pydocstyle
    "E501",   # line-too-long
    "COM812", # missing-trailing-comma # conflicts with ruff formatter
    "ISC001", # single-line-implicit-string-concatenation # conflicts with ruff formatter
]
unfixable = [
    "ERA", # eradicate
    "T20", # flake8-print
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
    "S101", # assert
]
